# htk-core

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
src/: main.cpp
src/core/: HeadTracker.cpp  HeadTracker.h  TrackingData.h
src/input/: WebcamTracker.cpp  WebcamTracker.h
src/output/: FreeTrackOutput.cpp  FreeTrackOutput.h  TrackIROutput.cpp  TrackIROutput.h
src/ui/: PreviewWidget.cpp  PreviewWidget.h
